--- a/src/BotToChiliz.Hangfire/BotToChiliz.Hangfire.csproj
+++ b/src/BotToChiliz.Hangfire/BotToChiliz.Hangfire.csproj
@@ -9,6 +9,11 @@
     <PackageReference Include="Hangfire.Dashboard.Basic.Authentication" Version="5.0.0" />
     <PackageReference Include="Hangfire.Firebase" Version="1.0.3" />
     <PackageReference Include="Hangfire.MemoryStorage" Version="1.7.0" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="3.2.0" />
+    <PackageReference Include="Serilog.Sinks.MariaDB" Version="1.0.1" />
   </ItemGroup>
 
 </Project>
