--- a/src/BotToChiliz.Domain/BotToChiliz.Domain.csproj
+++ b/src/BotToChiliz.Domain/BotToChiliz.Domain.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Extension" />
+  </ItemGroup>
+
 </Project>
