--- a/src/BotToChiliz.Domain/BotToChiliz.Domain.csproj
+++ b/src/BotToChiliz.Domain/BotToChiliz.Domain.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Extension\**" />
+    <EmbeddedResource Remove="Extension\**" />
+    <None Remove="Extension\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.10" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
@@ -13,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Extension" />
+    <ProjectReference Include="..\BotToChiliz.Abstraction\BotToChiliz.Abstraction.csproj" />
   </ItemGroup>
 
 </Project>
