--- a/src/BotToChiliz.Infrastructure/BotToChiliz.Infrastructure.csproj
+++ b/src/BotToChiliz.Infrastructure/BotToChiliz.Infrastructure.csproj
@@ -8,4 +8,10 @@
     <Folder Include="Adapter\Abstract\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Chiliz.Net" Version="2.5.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
+  </ItemGroup>
+
 </Project>
