Added Iclient implementation

--- a/src/BotToChiliz.Console/BotToChiliz.Console.csproj
+++ b/src/BotToChiliz.Console/BotToChiliz.Console.csproj
@@ -11,7 +11,7 @@
     <ItemGroup>
       <Content Include="appsettings.json">
         <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
       </Content>
     </ItemGroup>
