--- a/src/BotToChiliz.Console/appsettings.json
+++ b/src/BotToChiliz.Console/appsettings.json
@@ -7,7 +7,7 @@
         }
     },
     "AllowedHosts": "*",
-    "ChilizNetConfiguration": {
+    "ChilizClientConfiguration": {
         "ApiKey": "",
         "SecretKey": "",
         "BaseAddress":"Https://api.chiliz.net/HASAN"
