Console Project File Structure Updated

--- a/src/BotToChiliz.Console/appsettings.json
+++ b/src/BotToChiliz.Console/appsettings.json
@@ -10,6 +10,6 @@
     "ChilizClientConfiguration": {
         "ApiKey": "",
         "SecretKey": "",
-        "BaseAddress":"Https://api.chiliz.net/HASAN"
+        "BaseAddress":"Https://api.chiliz.net"
     }
 }
